--- a/manifest.json
+++ b/manifest.json
@@ -1,19 +1,15 @@
 {
-    "manifest_version": 3,
-    "name": "Word Extractor",
-    "version": "1.0",
-    "permissions": [
-      "contextMenus",
-      "activeTab"
-    ],
-    "background": {
-      "service_worker": "background.js"
-    },
-    "content_scripts": [
+  "manifest_version": 3,
+  "name": "Word Extractor",
+  "version": "1.0",
+  "permissions": ["contextMenus", "activeTab"],
+  "background": {
+    "service_worker": "background.js"
+  },
+  "content_scripts": [
     {
       "matches": ["<all_urls>"],
       "js": ["contentScript.js"]
     }
   ]
-  }
-  
+}
