--- a/manifest.json
+++ b/manifest.json
@@ -6,10 +6,8 @@
   "background": {
     "service_worker": "background.js"
   },
-  "content_scripts": [
-    {
-      "matches": ["<all_urls>"],
-      "js": ["contentScript.js"]
-    }
-  ]
+  "content_scripts": {
+    "matches": ["<all_urls>"],
+    "js": ["contentScript.js"]
+  }
 }
