--- a/manifest.json
+++ b/manifest.json
@@ -3,6 +3,14 @@
   "name": "Word Extractor",
   "version": "1.0",
   "permissions": ["contextMenus", "activeTab", "scripting"],
+  "action": {
+    "default_icon": {
+      "16": "/images/zeeguu16.png",
+      "32": "/images/zeeguu32.png",
+      "48": "/images/zeeguu48.png",
+      "128": "/images/zeeguu128.png"
+    }
+  },
   "background": {
     "service_worker": "background.js"
   },
@@ -12,5 +20,4 @@
       "js": ["contentScript.js"]
     }
   ]
-  }
-  
+}
