--- a/manifest.json
+++ b/manifest.json
@@ -5,10 +5,10 @@
   "permissions": ["contextMenus", "activeTab", "scripting"],
   "action": {
     "default_icon": {
-      "16": "/images/zeeguu16.png",
-      "32": "/images/zeeguu32.png",
-      "48": "/images/zeeguu48.png",
-      "128": "/images/zeeguu128.png"
+      "16": "/images/gold-elephant16.png",
+      "32": "/images/gold-elephant32.png",
+      "48": "/images/gold-elephant48.png",
+      "128": "/images/gold-elephant128.png"
     }
   },
   "background": {
